# pytorch-memory-forensics

./: .gitignore  Dockerfile  README.md  cnn_model.pt  cnn_model_torchscript.pt  custom_plugin_output.txt  devcontainer-log.txt  env.yml  export.py  model.py  setup.sh  torch_model_extractor_plugin.py
.devcontainer/: devcontainer.json
cpp_inference/: main.cpp
docs/: index.html
inference/: CMakeLists.txt
model/: train.py
